--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server/index.js", 
   "scripts": {
     "start": "node server/index.js", 
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install --prefix client"
   },
   "dependencies": {
   }
