--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server/index.js", 
   "scripts": {
-    "start": "node server/index.js", 
-    "heroku-postbuild": "npm install --prefix client"
+    "start": "node server/index.js"
   },
   "dependencies": {
   }
