--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "canvasapi",
   "version": "1.0.0",
-  "main": "server/index.js", 
+  "main": "server/server.js", 
   "scripts": {
-    "start": "node server/index.js"
+    "start": "node server/server.js"
   },
   "dependencies": {
   }
