--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
+  },
+  "engines": {
+    "node": "14.x" 
   }
 }
