--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server/server.js", 
   "scripts": {
-    "start": "node server/server.js",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "start": "node server/server.js"
   },
   "dependencies": {
   },
