--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "main": "server/server.js", 
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "ws": "^8.18.0"
   },
   "engines": {
     "node": "14.x" 
