--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "server/server.js", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
